# dicom-de-identification-and-curation-tool

./: CNAME  LICENSE  Makefile  README  index.html  index.js  main.py  package.json  pyproject.toml  script.js  style.css  styles.css  test.js
.github/: dependabot.yml
.github/workflows/: tests.yml  workflow.yml
docs/: CNAME  index.html  script.js  style.css
docs/node/: Makefile  index.js
docs/python/: Dockerfile  main.py  pyproject.toml
docs/python/prm/: dicom-tag-to-nema-action.js
node/: Makefile  index.js  package.json
node/release/: nema-modified-table.js  nema-table.js
python/: Dockerfile  main.py  pyproject.toml
test/: Makefile  package.json  test.js
