[project]
name = "UNKNOWN"
version = "0.0.0"
dependencies = [
	"pydicom==2.3.1",
]

[project.optional-dependencies]
dev = ["ruff==0.0.220"]

[tool.ruff]
select = ["A", "B", "BLE", "C", "C4", "E", "EM", "ERA", "F", "I", "ICN", "ISC", "N", "PD", "PGH", "PIE", "PLC", "PLE", "PLR", "PLW", "Q", "RET", "RUF", "S", "SIM", "T10", "T20", "TID", "UP", "W"]
ignore = ["B905", "C901", "E501", "PD013", "S101"]
fix = true

[tool.ruff.flake8-quotes]
inline-quotes = "single"
